--- a/discotheque-tracker/package.json
+++ b/discotheque-tracker/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bittorrent-tracker": "^8.0.13",
-    "read-torrent": "^1.3.0"
+    "bittorrent-tracker": "^8.5.0",
+    "webtorrent-hybrid": "^1.0.5"
   }
 }
