--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "discotheque",
   "version": "1.0.0",
-  "scripts": {
-    "build": "atool-build --no-compress",
-    "test": "jest",
-    "test:watch": "npm test -- --watch"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://cristovao-trevisan@github.com/cristovao-trevisan/discotheque.git"
@@ -16,25 +11,11 @@
     "url": "https://github.com/cristovao-trevisan/discotheque/issues"
   },
   "homepage": "https://github.com/cristovao-trevisan/discotheque#readme",
-  "devDependencies": {
-    "av": "^0.4.9",
-    "babel-cli": "^6.22.2",
-    "babel-jest": "^18.0.0",
-    "babel-plugin-import": "^1.1.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babelify": "^7.3.0",
-    "browserify-css": "^0.10.0",
-    "gulp": "^3.9.1",
-    "jest": "^18.1.0",
-    "antd": "^2.7.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+  "entry": {
+    "index": "./reactIndex.js"
   },
   "dependencies": {
+    "antd": "^2.1.0",
     "body-parser": "^1.16.0",
     "connect-pg": "^1.1.5",
     "connect-pg-simple": "^3.1.2",
@@ -43,21 +24,54 @@
     "ejs": "^2.5.6",
     "express": "^4.14.1",
     "express-session": "^1.15.0",
-    "mp3": "^0.1.0",
-    "mysql": "^2.12.0",
+    "fs-readfile-promise": "^3.0.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport.socketio": "^3.7.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
-    "rx": "^4.1.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "rxjs": "^5.2.0",
     "sequelize": "^3.28.0",
     "socket.io": "^1.7.3",
     "socket.io-events": "^0.4.6",
     "webtorrent": "^0.98.0"
   },
-  "entry": {
-    "index": "./reactIndex.js"
+  "devDependencies": {
+    "atool-build": "^0.9.0",
+    "atool-test-mocha": "^0.1.4",
+    "babel-eslint": "^7.0.0",
+    "babel-plugin-import": "^1.0.1",
+    "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-runtime": "^6.9.2",
+    "dora": "0.4.x",
+    "dora-plugin-webpack": "^0.8.1",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
+    "expect": "^1.20.1",
+    "jest": "^18.1.0",
+    "pre-commit": "1.x",
+    "react-icons": "^2.2.3",
+    "react-list": "^0.8.3",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
+    "redbox-react": "^1.2.6",
+    "redux": "^3.6.0",
+    "redux-observable": "^0.13.0"
   },
-  "theme": "./theme.js"
+  "scripts": {
+    "build": "atool-build --no-compress",
+    "start": "dora --plugins webpack",
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
+  },
+  "theme": "./theme.js",
+  "description": "",
+  "main": "config.js"
 }
