--- a/package.json
+++ b/package.json
@@ -30,17 +30,19 @@
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "rxjs": "^5.2.0",
-    "sequelize": "^3.28.0",
+    "sequelize": "^3.30.4",
+    "sequelize-to-json": "^0.10.2",
     "socket.io": "^1.7.3",
     "socket.io-events": "^0.4.6",
     "webtorrent": "^0.98.0"
   },
   "devDependencies": {
-    "jest": "^18.1.0"
+    "jest": "^18.1.0",
+    "standard": "^10.0.2"
   },
   "scripts": {
     "start": "NODE_ENV=production node mainServer",
-    "test": "jest",
+    "test": "standard && jest",
     "test:watch": "npm test -- --watch"
   },
   "theme": "./theme.js",
